--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   background-color: #e9e9e9;
 }
 
+.starting-card .card-body:hover {
+  opacity: 0.75;
+}
+
 .card {
   background-color: #caebf2;
   color: black;
@@ -42,7 +46,9 @@ h6 {
 .card-title {
   color: black;
   font-weight: bold;
+  text-align: center;
 }
+
 .main-card {
   width: 100%;
   display: flex;
